Fixed carousel layout on small mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -222,8 +222,14 @@ INTRO
 #intro .item .carousel-caption {
     left: 0;
     right: 0;
-    margin-left: 50px;
-    margin-right: 50px;
+}
+
+@media (max-width: 767px)
+{
+  #intro .item .carousel-caption {
+      left: 10px;
+      right: 10px;
+  }
 }
 #intro .container,
 #intro .row {
